@@ -10,7 +10,7 @@ except ImportError:
 
 setup(name = 'twill',
       
-      version = '0.8.5a3',
+      version = '0.8.5a4',
       download_url = 'http://darcs.idyll.org/~t/projects/twill-0.8.5.tar.gz',
       
       description = 'twill Web browsing language',
